fix scrollbar behaviour

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,6 +1,7 @@
 @import '../../globals/themes';
 
 .about {
+  position: absolute;
   text-align: center;
   font-size: 11px;
   position: absolute;
